# sentinel

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  demo-gif.yml  evals.yml  release.yml
dashboard/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  format.ts  hooks.ts  index.css  types.ts
dashboard/src/components/: Layout.tsx  SpanDetail.tsx  Waterfall.tsx  common.tsx
docs/: architecture.md  configuration.md  sdk-python.md
docs/assets/: README.md
evals/: README.md  run_evals.py
evals/datasets/: factual_qa.jsonl
examples/: README.md
examples/anthropic-tools/: requirements.txt  tools.py
examples/langchain-rag/: rag.py  requirements.txt
examples/openai-agent/: agent.py  requirements.txt
examples/quickstart/: README.md  seed_demo.py
server/: Dockerfile  README.md  pyproject.toml
server/sentinel_server/: __init__.py  auth.py  cli.py  config.py  db.py  guardrails.py  ingest.py  main.py  metrics.py  models.py  retention.py  schemas.py
server/sentinel_server/routes/: alerts.py  prompts.py  stats.py  traces.py
server/tests/: conftest.py  test_api.py  test_guardrails_and_lifecycle.py
tools/demo-capture/: README.md  capture.mjs  package.json
(+5 files in other folders)
