[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-server"
version = "0.1.1"
description = "Sentinel collector and API server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0.50",
    "aiosqlite>=0.19",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "prometheus-client>=0.20",
    "sentinel-evaluators",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
sentinel-server = "sentinel_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sentinel_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
